--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,15 @@
 * {
     padding: 0;
     margin: 0;
-    color: #cccbb7;
+    color: #b0ad96;
     font-variant: small-caps;
+    font-family: 'custom', sans-serif;
+}
+@font-face {
+    font-family: 'custom';
+    src: url('ShareTechMonoRegular_0_0.otf');
+    font-weight: normal;
+    font-style: normal;
 }
 .getready {
     margin: 1em;
@@ -34,13 +41,24 @@ main {
 .eftinfo {
     padding: 2vh;
 }
-.PMC {
-    padding: 2vw;
-    margin: 2vw;
+.gameinfo {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.comments {
+    margin: 5em;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 20px;
 }
 .pmcicon {
     width: 300px;
     height: 370px;
+    padding: 20px;
 }
 .features {
     padding: 2vw;
@@ -55,7 +73,7 @@ main {
     height: 3px;
     background: #837457;
 }
-.infoimgs {
+.imgs {
     border: #837457;
     box-shadow:     
     inset 0 -3em 3em #837457,
@@ -75,4 +93,12 @@ main {
 }
 li {
     padding: 5px;
+}
+.feature {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+.featurestext {
+    padding: 20px;
 }
