--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,15 @@ header {
 main {
     background-color: #151413;
 }
+
+.head-text{
+    
+}
+
+.content {
+
+}
+
 .background {
     width: 100%;
     height: 100%;
@@ -31,6 +40,7 @@ main {
     background-position: center;
     background-size: cover;
     background-color: #151413;
+    transform: translateZ(-50px) scale(1.1);
 }
 .about {
     padding: 2em;
@@ -120,4 +130,21 @@ footer {
 .about h2{
     line-height: 2em;
     padding: 1em;
+}
+.layers-container {
+    height: 100vh;
+    transform-style: preserve-3d;
+    will-change: transform;
+}
+.layers-item {
+    position: absolute;
+    background-size: cover;
+    background-position: center;
+}
+.head-text {
+    transform: translateZ(80px)scale(0.8);
+}
+.hero {
+    perspective: 1000px;
+    overflow: hidden;   
 }
