--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@
 }
 header {
     width: 100vw;
-    height: 100vh;
+    height: 99vh;
     position: relative;
     overflow: hidden;
 }
@@ -99,10 +99,10 @@ main {
 .after {
     content: "";
     position: absolute;
-    bottom: -10px;
+    bottom: -1em;
     left: 0;
-    width: 60px;
-    height: 3px;
+    width: 6em;
+    height: 0.3em;
     background: var(--primary);
 }
 .imgs {
@@ -124,15 +124,15 @@ main {
     padding: 1em;
 }
 li {
-    padding: 5px;
+    padding: 0.5em;
 }
 .feature {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 2em;
 }
 .featurestext {
-    padding: 20px;
+    padding: 2em;
 }
 footer {
     display: flex;
@@ -140,13 +140,7 @@ footer {
     padding-bottom:2em;
     padding-left:5em ;
 }
-.about h2 {
-    color: var(--primary);
-}
-.features-list h2 {
-    color: var(--primary);
-}
-.comments h2 {
+h2 {
     color: var(--primary);
 }
 .about h2{
@@ -169,4 +163,54 @@ footer {
 .hero {
     perspective: 1000px;
     overflow: hidden;   
+}
+.music {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2em
+}
+.musiccontainer {
+    border-radius: 0.2em;
+    padding: 1em;
+    width: 25vw;
+    min-width: fit-content;
+    height: 23vh;
+    background-color: var(--primary);
+    border: var(--primary);
+    box-shadow:     
+    inset 0 -3em 3em var(--primary),
+    0 0 0 1px var(--primary),
+    0.3em 0.3em 1em var(--primary);
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.musicimg {
+    border-radius: 100%;
+    width: 23vh;
+    height: 23vh;
+    display: flex;
+    align-items: left;
+    justify-content: left;
+}
+.playbtn {
+    margin: 0.5em;
+    width: 2vw;
+    height: 2vh;
+    border-radius: 100%;
+    background-color: #b8b8b8;
+}
+.progressbar {
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    margin: 0.5em;
+    width: 15vw;
+    height: 1vh;
+    border-radius: 0.5em;
+    background-color: #b8b8b8;
+}
+.musicprogress {
+    padding: 1em;
 }
